Fixed overlapped text in communities modal (5903), and fixed misplaced member icons found in ie(5925)
- removed float : right from .images in groups.less
- wrapped <p> for number of members in div in groupInfoView.html
- changed CommunityTemplate.html, changed class name for url, added class attribute for title
- added style for .community-share

--- a/css/groups.less
+++ b/css/groups.less
@@ -126,8 +126,6 @@
 
 		.images {
 
-			float: right;
-
 			ul {
 				width: 150px;
 			}
