--- a/css/share/share.less
+++ b/css/share/share.less
@@ -74,8 +74,9 @@
 
 			}
 
-			.community-share-link {
-				word-break : break-all;
+			.community-share {
+				word-break : break-word;
+				word-wrap  : break-word;
 			}
 
 			.message {
